--- a/index.html
+++ b/index.html
@@ -13,39 +13,86 @@
 
     <section class="heading">
       <h1>Chelsea FC Wire</h1>
-      <section class="heading_1">
-      </section>
     </section>
 
     <section class="main-content container_12">
-      <!-- a box -->
-      <div class="box grid_3">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet vehicula metus. Morbi ut massa porttitor, porttitor augue a, aliquet erat. Fusce ut lorem nulla. Suspendisse potenti. Integer nec ante ipsum. Nam commodo fermentum augue, at congue purus commodo in. Quisque a elit metus. Duis maximus volutpat nisl, at tempor risus pulvinar eu. Maecenas vel tincidunt odio, et viverra tellus. Vivamus congue eros enim, ut volutpat nibh fermentum at. Suspendisse accumsan ullamcorper vulputate. Aliquam erat volutpat. Quisque vehicula metus at ipsum ornare fringilla.</p>
-        <p>Curabitur mi dolor, rutrum eget tincidunt ut, molestie vel lorem. Nullam vulputate lobortis nibh sed feugiat. Nulla eu elit eu enim lacinia finibus eget eget mauris. Vestibulum massa dui, gravida et sapien eu, tincidunt condimentum odio. In hac habitasse platea dictumst. Duis lacinia lectus egestas, pharetra purus id, porta turpis. Etiam bibendum massa et viverra bibendum. Pellentesque sit amet sodales nunc. Nulla ultricies ligula in dui dapibus, vitae tincidunt justo interdum. Duis a lacus urna.</p>
-        <p>Donec consequat venenatis orci, nec aliquet est mattis et. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque id nunc at tortor aliquet viverra faucibus sed eros. Nunc porta eros non euismod pulvinar. Phasellus nec vehicula augue. Etiam egestas purus eget consectetur porta. Cras condimentum mi id justo bibendum egestas. Aliquam in est a nunc dapibus dictum. Sed tellus est, luctus non dictum non, consectetur eu felis. Maecenas venenatis ligula eu odio ultrices, vel sagittis orci fringilla. Integer arcu magna, pellentesque quis mi accumsan, eleifend laoreet turpis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
-      </div> <!-- end box -->
 
-      <!-- a box -->
-      <div class="box grid_3">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Fusce viverra molestie finibus. Maecenas eu augue vitae libero tincidunt varius. Ut velit nunc, dignissim et gravida vel, posuere et libero. Aenean luctus, libero vel porta mattis, massa odio consequat lectus, at placerat massa lacus non ligula. Pellentesque rhoncus nunc sit amet dui dapibus, ut egestas odio fermentum. Donec condimentum dapibus justo. Praesent malesuada sed metus nec posuere.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
-      </div> <!-- end box -->
+      <div class="box grid_10">
+        <h2>Score Center</h2>
+        <ol>
+          <li>Chelsea 2-2 West Brom</li>
+          <li>Chelsea 1-2 PSG </li>
+          <li>Chelsea 4-4 Man U</li>
+        </ol>
+      </div>
 
-      <!-- a box -->
-      <div class="box grid_3">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Vestibulum laoreet ultrices nisi ut ullamcorper. Aenean mattis mauris enim, ac egestas augue aliquam quis. Phasellus eget luctus arcu, sed volutpat erat. Donec laoreet condimentum elit, quis lobortis dui efficitur et. Fusce elementum bibendum felis, eu egestas lectus porttitor sit amet.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
-      </div> <!-- end box -->
+      <div class="box grid_10">
+        <h2>Social Media Center</h2>
+        <<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Here&#39;s your chance to win a Chelsea shirt signed by John Terry... <a href="https://t.co/CTy9LJL7f9">https://t.co/CTy9LJL7f9/a> <a href="https://t.co/sl2zSJlQ0G">pic.twitter.com/sl2zSJlQ0G</a></p>&mdash; Chelsea FC (@ChelseaFC) <a href="https://twitter.com/ChelseaFC/status/711627228359090177">March 20, 2016</a></blockquote>
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script><iframe width="560" height="315" src="https://www.youtube.com/embed/lbeH_YRm2No" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lbeH_YRm2No" frameborder="0" allowfullscreen></iframe>
+      </div>
 
+
+
+
+      <div class="box grid_7">
+        <h2>Conte to become Chelsea manager after Euro 2016</h2>
+        <img class="newsimg" src="img/1conte.jpg">
+      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
+        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
+        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
+        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
+        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
+        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      </div>
+    <div class="box grid_3">
+        <h2>Eden Hazard to leave for PSG</h2>
+        <img class="newsimg" src="img/hazard.jpg">
+      </p> Barclays Player of the Year 2014, Eden Hazard, has been tempted by a mega offer by Parisian club PSG.
+    The offer is believed to eclipse the $100m world record fee paid by Real Madrid to Manchester United for Cristaino Ronaldo. Although the club have consistently asserted he is not for sale, an offer of the magnitude the French club has offered cannot be ignored. Eden Hazard has been in poor form this season, and has yet to record a single goal or assist. Neither the club nor the player were available for comment.</p>
+      </div>
+    <div class="box grid_5">
+        <h2>Chelsea 2 West Brom 2</h2>
+        <img class="newsimg" src="img/wba.png">
+      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
+        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
+        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
+        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
+        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
+        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      </div>
+    <div class="box grid_5">
+        <h2>Cuadrado moves permanently</h2>
+        <img class="newsimg" src="img/cuadrado.jpg">
+      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
+        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
+        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
+        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
+        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
+        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      </div>
+    <div class="box grid_5">
+        <h2>Guus Hiddink mum on Pato</h2>
+        <img class="newsimg" src="img/pato.jpg">
+      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
+        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
+        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
+        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
+        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
+        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      </div>
+      <div class="box grid_5">
+        <h2>Musonda rejected Barcelona</h2>
+        <img class="newsimg" src="img/musonda.png">
+      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
+        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
+        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
+        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
+        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
+        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      </div>
     </section>
-
     <section class="footer">
       <p>Details about your site and such.</p>
     </section>
