--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" type="text/css" href="css/text.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/960.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/custom.css" media="screen">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
 
     <section class="heading">
-      <h1>Chelsea FC Wire</h1>
+      <h1>The Chelsea Wire</h1>
     </section>
 
     <section class="main-content container_12">
+      <div class="box grid_11">
+        <h3> The Latest Chelsea News. Keep the Blue Flag Flying High. </h3>
+      </div>
 
       <div class="box grid_10">
         <h2>Score Center</h2>
@@ -25,21 +30,12 @@
           <li>Chelsea 4-4 Man U</li>
         </ol>
       </div>
-
-      <div class="box grid_10">
-        <h2>Social Media Center</h2>
-        <<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Here&#39;s your chance to win a Chelsea shirt signed by John Terry... <a href="https://t.co/CTy9LJL7f9">https://t.co/CTy9LJL7f9/a> <a href="https://t.co/sl2zSJlQ0G">pic.twitter.com/sl2zSJlQ0G</a></p>&mdash; Chelsea FC (@ChelseaFC) <a href="https://twitter.com/ChelseaFC/status/711627228359090177">March 20, 2016</a></blockquote>
-        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script><iframe width="560" height="315" src="https://www.youtube.com/embed/lbeH_YRm2No" frameborder="0" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lbeH_YRm2No" frameborder="0" allowfullscreen></iframe>
-      </div>
-
-
-
-
+      <hr>
+      <hr>
       <div class="box grid_7">
         <h2>Conte to become Chelsea manager after Euro 2016</h2>
-        <img class="newsimg" src="img/1conte.jpg">
-      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
+        <img class="newsimg" src="img/conte.jpg">
+       <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
         Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
         The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
         "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
@@ -49,7 +45,8 @@
     <div class="box grid_3">
         <h2>Eden Hazard to leave for PSG</h2>
         <img class="newsimg" src="img/hazard.jpg">
-      </p> Barclays Player of the Year 2014, Eden Hazard, has been tempted by a mega offer by Parisian club PSG.
+        <br>
+      <p> Barclays Player of the Year 2014, Eden Hazard, has been tempted by a mega offer by Parisian club PSG.
     The offer is believed to eclipse the $100m world record fee paid by Real Madrid to Manchester United for Cristaino Ronaldo. Although the club have consistently asserted he is not for sale, an offer of the magnitude the French club has offered cannot be ignored. Eden Hazard has been in poor form this season, and has yet to record a single goal or assist. Neither the club nor the player were available for comment.</p>
       </div>
     <div class="box grid_5">
@@ -92,7 +89,16 @@
         Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
         Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
       </div>
+      <hr>
+      <hr>
+      <div class="box grid_10">
+        <h2> Video of the Week </h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lbeH_YRm2No" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <hr>
+      <hr>
     </section>
+
     <section class="footer">
       <p>Details about your site and such.</p>
     </section>
