--- a/index.html
+++ b/index.html
@@ -13,31 +13,37 @@
   </head>
   <body>
 
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
     <section class="heading">
       <h1>The Chelsea Wire</h1>
     </section>
 
-    <section class="main-content container_12">
+    <section class="main-content container_12" name="top">
       <div class="box grid_11">
         <h3> The Latest Chelsea News. Keep the Blue Flag Flying High. </h3>
+        <a href=#headlines>Headlines</a> <a href=#video>Video of the Week</a> <a href=#news>More News</a>
+        <div class="fb-like" data-href="https://www.facebook.com/ChelseaFC" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
       </div>
 
       <div class="box grid_10">
         <h2>Score Center</h2>
-        <ol>
-          <li>Chelsea 2-2 West Brom</li>
-          <li>Chelsea 1-2 PSG </li>
-          <li>Chelsea 4-4 Man U</li>
-        </ol>
+          Chelsea 2-2 West Brom <br>
+          Chelsea 1-2 PSG <br>
+          Chelsea 4-4 Man U <br>
       </div>
-      <hr>
-      <hr>
-      <div class="box grid_7">
+      <div class="box grid_7" name="headlines">
         <h2>Conte to become Chelsea manager after Euro 2016</h2>
         <img class="newsimg" src="img/conte.jpg">
        <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
-        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
-        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
+        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.  The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
         "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
         Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
         Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
@@ -52,46 +58,24 @@
     <div class="box grid_5">
         <h2>Chelsea 2 West Brom 2</h2>
         <img class="newsimg" src="img/wba.png">
-      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
-        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
-        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
-        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
-        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
-        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      <p>James McClean's late equaliser earned West Brom a share of the points as they refused to accept defeat at Chelsea. The Blues went ahead when Cesar Azpilicueta turned in fellow full-back Branislav Ivanovic's low cross. Craig Gardner's skimming shot levelled, but it seemed Chelsea had done enough when Gareth McAuley prodded Willian's cross into his own net.But when the home defence failed to clear McClean made them pay with a pinpoint shot into the bottom corner. The Republic of Ireland international's leveller was the final twist in an often ill-tempered game with Chelsea striker Diego Costa at the centre of several flashpoints.</p>
       </div>
     <div class="box grid_5">
-        <h2>Cuadrado moves permanently</h2>
+        <h2>Juve want Cuadrado permanently</h2>
         <img class="newsimg" src="img/cuadrado.jpg">
-      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
-        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
-        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
-        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
-        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
-        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
-      </div>
+      <p>Juventus have warned Chelsea that the reported impending appointment of Antonio Conte will not affect the club's stance of keeping Juan Cuadrado. Colombian international Cuadrado is on a season-long loan at Juve and the Italian champions do want to follow through on a gentlemen's agreement to sign the wideman permanently this summer. According to the Evening Standard, current Italy boss Conte, who is expected to become Chelsea's next full-time boss after Euro 2016, has told the Blues board that he wants Cuadrado back at Stamford Bridge.However, Juve chief executive Giuseppe Marotta is confident of landing the 27-year-old on a long-term deal.</p>
+    </div>
     <div class="box grid_5">
         <h2>Guus Hiddink mum on Pato</h2>
         <img class="newsimg" src="img/pato.jpg">
-      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
-        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
-        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
-        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
-        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
-        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      <p>The Brazilian striker is yet to make his first appearance for the west London club after joining the Blues on loan from Corinthians until the end of the season back in January. Pato has been working on his fitness levels at Chelsea’s Cobham training ground in recent weeks but is yet to earn a place in the starting line-up.Hiddink opted to start Loic Remy in the place of Diego Costa for Saturday’s game.And asked in his post-mach news conference if he considered bring on Pato, Hiddink replied: “When Costa is not there we have Remy, we also have Traore and Pato."" </p>
       </div>
       <div class="box grid_5">
         <h2>Musonda rejected Barcelona</h2>
         <img class="newsimg" src="img/musonda.png">
-      <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
-        Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.
-        The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
-        "I feel that I must go back to being a coach in a club to have the opportunity of coaching every day," said Conte.
-        Conte led the Turin club to three successive Serie A titles prior to taking on the national job.
-        Chelsea sacked Jose Mourinho as their manager in December 2015 and appointed Guus Hiddink on an interim basis until the end of the season.</p>
+      <p>Real Betis loanee Charly Musonda has revealed that he turned down the chance to join Barcelona in 2012 in favour of a move to parent club Chelsea.The 19-year-old left Anderlecht's famed youth academy at 16 to join the Blues, with whom he is still yet to make his first-team debut for. Musonda says Chelsea's decision to also snap up his brothers Lamisha and Tika played a key role in him snubbing the advances of Barcelona. "It is true that I rejected Barcelona because Chelsea also agreed to sign my brothers," Musonda told Marca.
       </div>
-      <hr>
-      <hr>
-      <div class="box grid_10">
+      <div class="box grid_10" name="video">
         <h2> Video of the Week </h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lbeH_YRm2No" frameborder="0" allowfullscreen></iframe>
       </div>
@@ -99,6 +83,7 @@
       <hr>
     </section>
 
+    <h6> <a href="#top">Go to Top </a></h6>
     <section class="footer">
       <p>Details about your site and such.</p>
     </section>
