--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 
     <section class="main-content container_12" name="top">
       <div class="box grid_11">
-        <h3> The Latest Chelsea News. Keep the Blue Flag Flying High. </h3>
+        <h3> The Latest Chelsea Football Club News. Keep the Blue Flag Flying High. </h3>
         <a href=#headlines>Headlines</a> <a href=#video>Video of the Week</a> <a href=#news>More News</a>
-        <div class="fb-like" data-href="https://www.facebook.com/ChelseaFC" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
       </div>
 
       <div class="box grid_10">
@@ -39,8 +38,8 @@
           Chelsea 1-2 PSG <br>
           Chelsea 4-4 Man U <br>
       </div>
-      <div class="box grid_7" name="headlines">
-        <h2>Conte to become Chelsea manager after Euro 2016</h2>
+      <div class="box grid_7">
+        <h2 name="headlines">Conte to become Chelsea manager after Euro 2016</h2>
         <img class="newsimg" src="img/conte.jpg">
        <p>Antonio Conte <em>will step down from his position as manager of Italy following Euro 2016</em>.
         Conte has been <em>heavily linked with the managerial vacancy</em> at Chelsea and this move increases the prospect of him taking over at Stamford Bridge.  The 46-year-old was appointed Italy manager in August 2014 shortly after resigning as coach of Juventus.
@@ -75,17 +74,21 @@
         <img class="newsimg" src="img/musonda.png">
       <p>Real Betis loanee Charly Musonda has revealed that he turned down the chance to join Barcelona in 2012 in favour of a move to parent club Chelsea.The 19-year-old left Anderlecht's famed youth academy at 16 to join the Blues, with whom he is still yet to make his first-team debut for. Musonda says Chelsea's decision to also snap up his brothers Lamisha and Tika played a key role in him snubbing the advances of Barcelona. "It is true that I rejected Barcelona because Chelsea also agreed to sign my brothers," Musonda told Marca.
       </div>
-      <div class="box grid_10" name="video">
-        <h2> Video of the Week </h2>
+      <div class="box grid_10">
+        <h2 name="video"> Video of the Week </h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lbeH_YRm2No" frameborder="0" allowfullscreen></iframe>
       </div>
-      <hr>
-      <hr>
+      <div class="box grid_11" id="morenews">
+        <h3><a href ="http://www.theguardian.com/football/chelsea" target="_blank"> Go to More News </a></h3><br>
+        <div class="fb-like" data-href="https://www.facebook.com/ChelseaFC" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+      </div>
     </section>
 
     <h6> <a href="#top">Go to Top </a></h6>
     <section class="footer">
-      <p>Details about your site and such.</p>
+      <br>
+      <br>
+      <p>Site created by Abhishek Swain. All logos and names are property of Chelsea Football Club</p>
     </section>
 
 
