--- a/index.html
+++ b/index.html
@@ -86,15 +86,14 @@
       <div class="box grid_11" id="news">
         <h3><a href ="http://www.theguardian.com/football/chelsea" target="_blank" id="morenews"> More Chelsea News </a></h3>
         <h6> <a href="#top">Go to Top </a></h6>
-        <div class="fb-like" data-href="https://www.facebook.com/ChelseaFC" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
       </div>
     </section>
 
 
     <section class="footer">
       <br>
-      <br>
-      <p>Site created by <a href="http://abhiswain9.github.io/personalBioPage/" target="_blank">Abhishek Swain</a>. All logos and names are property of Chelsea Football Club</a></p>
+      <p>Site created by <a href="http://abhiswain9.github.io/personalBioPage/" target="_blank">Abhishek Swain</a>. All logos and names are property of Chelsea Football Club</a></p><br>
+        <div class="fb-like" data-href="https://www.facebook.com/ChelseaFC" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
     </section>
 
 
